--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -8,6 +8,10 @@
         <li><NavLink href="/login">Login</NavLink></li>
         <li><NavLink href="/about">About</NavLink></li>
         <li><NavLink href="/contact">Contact</NavLink></li>
+        <li><NavLink href="/dashboard" class="nav-link" Match="NavLinkMatch.All">
+            Dashboard
+        </NavLink></li>
+
     </ul>
 </nav>
 
