--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -12,6 +12,7 @@
     <title>DarkMarket</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/site.css" />
+    <link href="css/login.css" rel="stylesheet" />
     <link rel="icon" href="favicon.ico" />
 </head>
 <body>
